--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/dcamere/playpal-back#readme",
   "devDependencies": {
-    "discord-oauth2": "^2.11.0"
+    "discord-oauth2": "^2.11.0",
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0"
   }
 }
