--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/dcamere/playpal-back#readme",
   "devDependencies": {
+    "cors": "^2.8.5",
     "discord-oauth2": "^2.11.0",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
